written some sentences to documentation

--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -1,14 +1,25 @@
 \documentclass[11pt]{scrartcl}
 
+\usepackage{hyperref}
+
 \title{Ricart-Agrawala algoritmus v Javě}
 \subtitle{Semestrální práce do DSV na FEL ČVUT v Praze}
-\author{Roman Janků (jankurom@fel.cvut.cz)}
+\author{Roman Janků \\ (jankurom@fel.cvut.cz)}
 \date{29. prosince 2021}
 
 \begin{document}
 
     \maketitle
 
+    Tento dokument popisuje funkcionalitu projektu, který jsem vytvořil pro předmět B2M32DSVA Distribuované systémy a
+    výpočty na Fakultě Elektrotechnické Českého Vysokého Učení Technického v Praze v zimním semestru 2021/2022.
 
+    Projekt se zabývá implementací Ricart-Agrawala algoritmu v Javě za využití Java RMI\footnote{Java Remote Method
+    Invocation}. Zdrojové kódy projektu jsou dostupné na fakultním GitLabu
+    \footnote{\url{https://gitlab.fel.cvut.cz/jankurom/dsv-semestral-work}}.
+
+    \section*{Zjednodušení}
+
+    \section*{Funkcionalita }
 
 \end{document}
